objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACCOUNT_STATUS__c</fullName>
        <label>ACCOUNT_STATUS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Logo__c</fullName>
        <label>Account Logo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorize_Work_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorized Work Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BILL_TO_CODE__c</fullName>
        <label>BILL_TO_CODE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BILL_TO_NAME__c</fullName>
        <label>BILL_TO_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMSApplicationURL__c</fullName>
        <description>To store location specific BMS URL..</description>
        <label>BMSApplicationURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BMSAvailableCredit__c</fullName>
        <label>Available Credit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMS_Customer_ID_Junction__c</fullName>
        <label>BMS Customer ID Junction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Customer_ID__c</fullName>
        <label>BMS Customer ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMS Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOLT_Account_Number__c</fullName>
        <description>This is the actual customer number. (Oracle customer number)</description>
        <externalId>true</externalId>
        <label>BOLT Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOLT_reference_number__c</fullName>
        <label>BOLT reference number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BUSINESS_UNIT__c</fullName>
        <label>BUSINESS_UNIT</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bolt_Acc_Site_Reference__c</fullName>
        <label>Bolt Acc Site Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bolt_BC_Code__c</fullName>
        <label>Bolt_BC_Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bolt_Credit_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bolt Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bolt_Customer_Account_Status__c</fullName>
        <label>Bolt Customer Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bolt_Customer_Type__c</fullName>
        <label>Bolt Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bolt_Party_Name__c</fullName>
        <label>Bolt Party Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bolt_Party_Number__c</fullName>
        <label>Bolt Party Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bolt_Payment_Terms__c</fullName>
        <label>Bolt_Payment Terms</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bolt_Receivable_Account__c</fullName>
        <label>Bolt Receivable Account</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bolt_Site_Number__c</fullName>
        <label>Bolt Site Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CERTIFICATION_END_DATE__c</fullName>
        <label>CERTIFICATION_END_DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CG_ANVL_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field is used to track the ANVL Enabled locations and call ANVL Services based on this checkbox</description>
        <label>CG_ANVL_Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHANNEL_CODE__c</fullName>
        <label>CHANNEL_CODE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_OF_DISTRIBUTION__c</fullName>
        <label>CHANNEL_OF_DISTRIBUTION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Account_Num__c</fullName>
        <displayFormat>{0}</displayFormat>
        <externalId>true</externalId>
        <label>Account #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CMI_Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active-Indemnified</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pending CDA</fullName>
                    <isActive>false</isActive>
                    <label>Pending CDA</label>
                </value>
                <value>
                    <fullName>Pending Data Flow Verification</fullName>
                    <isActive>false</isActive>
                    <label>Pending Data Flow Verification</label>
                </value>
                <value>
                    <fullName>Pending Final Approval</fullName>
                    <isActive>false</isActive>
                    <label>Pending Final Approval</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <isActive>false</isActive>
                    <label>Rejected</label>
                </value>
                <value>
                    <fullName>Signed CDA</fullName>
                    <isActive>false</isActive>
                    <label>Signed CDA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_Activated_By__c</fullName>
        <label>Activated_By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMI_Address2__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Address3__c</fullName>
        <label>Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_ApproverLink__c</fullName>
        <formula>$Label.CMI_CustomerApproval_Link</formula>
        <label>CMI_ApproverLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Billing_Address__c</fullName>
        <formula>if(LEN(BillingStreet)&gt;0, BillingStreet&amp; &quot; &quot; , &quot;&quot; )&amp;  BR() &amp;
if(LEN(CMI_Address2__c )&gt;0, CMI_Address2__c &amp; &quot;, &quot; ,&quot;&quot; ) &amp;
if(LEN(CMI_Address3__c )&gt;0, CMI_Address3__c &amp; &quot;, &quot; , &quot;&quot; ) &amp;
if(LEN(BillingCity)&gt;0, BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp; 
if(LEN(BillingState)&gt;0, BillingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(BillingPostalCode)&gt;0, BillingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN(BillingCountry) &gt;0,BillingCountry,&quot;&quot;)</formula>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_CDA_Status__c</fullName>
        <label>CDA_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Customer Request</fullName>
                    <default>true</default>
                    <label>New Customer Request</label>
                </value>
                <value>
                    <fullName>Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Signed by Customer</fullName>
                </value>
                <value>
                    <fullName>Fully Signed</fullName>
                    <isActive>false</isActive>
                    <label>Fully Signed</label>
                </value>
                <value>
                    <fullName>Pending CDA</fullName>
                    <isActive>false</isActive>
                    <label>Pending CDA</label>
                </value>
                <value>
                    <fullName>Sent to Cummins</fullName>
                    <isActive>false</isActive>
                    <label>Sent to Cummins</label>
                </value>
                <value>
                    <fullName>Signed by Cummins</fullName>
                    <isActive>false</isActive>
                    <label>Signed by Cummins</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_CId__c</fullName>
        <label>CId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Care_Service_Level__c</fullName>
        <label>Care Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RLS</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_ConnectedSol_Link__c</fullName>
        <formula>$Label.CMI_ConnectedSol_Link</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMI_ConnectedSol_Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_CountTSPIDs__c</fullName>
        <label>CountTSPIDs</label>
        <summaryFilterItems>
            <field>CMI_TSP__c.CMI_TSP_Name__c</field>
            <operation>notEqual</operation>
            <value>Other TSP</value>
        </summaryFilterItems>
        <summaryForeignKey>CMI_TSP__c.CMI_Account_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CMI_CumminsEnginesLink__c</fullName>
        <formula>$Label.CMI_Cummins_Engines</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMI_CumminsEngines_Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Cummins_Customer_Id__c</fullName>
        <externalId>true</externalId>
        <label>Cummins Customer Id </label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMI_Cummins_Support_Email__c</fullName>
        <label>Cummins Support Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Cummins_Support_First_Name__c</fullName>
        <label>Cummins Support First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Cummins_Support_Last_Name__c</fullName>
        <label>Cummins Support Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Cumminslogo_Link__c</fullName>
        <formula>$Label.CMI_Cumminslogo_Link</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMI_Cumminslogo_Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Customer_Equipment_Group__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Customer Equipment Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Customer_SK__c</fullName>
        <label>Customer SK</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Email_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for email response</description>
        <label>Email Response Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMI_Indemnified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indemnified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMI_InviteUserPage_Link__c</fullName>
        <formula>$Label.CMI_InviteUserPage_Link</formula>
        <label>CMI_InviteUserPage_Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Inviteuser__c</fullName>
        <label>Inviteuser</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMI_Moratorium_End_Date__c</fullName>
        <label>Moratorium End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMI_Moratorium_Start_Date__c</fullName>
        <label>Moratorium Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMI_Moratorium__c</fullName>
        <label>Moratorium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_Moratoriumcal__c</fullName>
        <formula>CMI_Moratorium_End_Date__c - CMI_Moratorium_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Moratoriumcal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMI_OtherTsp_Link__c</fullName>
        <formula>$Label.CMI_OtherTsp_Link</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMI_OtherTsp_Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Other_Fault_Notifications_Email__c</fullName>
        <label>Other Fault Notifications Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Other_Fault_Notifications__c</fullName>
        <label>Other Fault Notifications</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OnCommand</fullName>
                </value>
                <value>
                    <fullName>Saucon TDS Fault Code Response Interface</fullName>
                </value>
                <value>
                    <fullName>No System</fullName>
                    <default>true</default>
                    <label>No System</label>
                </value>
                <value>
                    <fullName>Galaxy Telematics</fullName>
                    <isActive>false</isActive>
                    <label>Galaxy Telematics</label>
                </value>
                <value>
                    <fullName>Other Customer System</fullName>
                    <isActive>false</isActive>
                    <label>Other Customer System</label>
                </value>
                <value>
                    <fullName>Tata Fleetman</fullName>
                    <isActive>false</isActive>
                    <label>Tata Fleetman</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_Other_TSP__c</fullName>
        <label>Other TSP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Primary_Contact_Email__c</fullName>
        <formula>CMI_Primary_Contact__r.Email</formula>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Primary_Contact_Phone__c</fullName>
        <formula>CMI_Primary_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.CMI_Contact_Type__c</field>
                <operation>equals</operation>
                <value>Primary</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMI_Region__c</fullName>
        <label>CMI_Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>East Asia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
                <value>
                    <fullName>South Pacific</fullName>
                </value>
                <value>
                    <fullName>Southeast Asia</fullName>
                </value>
                <value>
                    <fullName>US and Canada</fullName>
                </value>
                <value>
                    <fullName>NORTH AMERICA</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                    <isActive>false</isActive>
                    <label>Asia</label>
                </value>
                <value>
                    <fullName>Central and South America</fullName>
                    <isActive>false</isActive>
                    <label>Central and South America</label>
                </value>
                <value>
                    <fullName>North America and Caribbean</fullName>
                    <isActive>false</isActive>
                    <label>North America and Caribbean</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_Request_withdrawn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request withdrawn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMI_SP_Expiration_Date__c</fullName>
        <label>CMI_SP_Expiration_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMI_Service_Now__c</fullName>
        <label>Service Now</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No delay</fullName>
                </value>
                <value>
                    <fullName>1 hour</fullName>
                </value>
                <value>
                    <fullName>4 hours</fullName>
                </value>
                <value>
                    <fullName>8 hours</fullName>
                </value>
                <value>
                    <fullName>12 hours</fullName>
                </value>
                <value>
                    <fullName>1 day</fullName>
                </value>
                <value>
                    <fullName>2 days</fullName>
                </value>
                <value>
                    <fullName>3 days</fullName>
                </value>
                <value>
                    <fullName>Every 12 Hours</fullName>
                    <isActive>false</isActive>
                    <label>Every 12 Hours</label>
                </value>
                <value>
                    <fullName>Every 2 days</fullName>
                    <isActive>false</isActive>
                    <label>Every 2 days</label>
                </value>
                <value>
                    <fullName>Every 3 days</fullName>
                    <isActive>false</isActive>
                    <label>Every 3 days</label>
                </value>
                <value>
                    <fullName>Every 4 Hours</fullName>
                    <isActive>false</isActive>
                    <label>Every 4 Hours</label>
                </value>
                <value>
                    <fullName>Every 8 Hours</fullName>
                    <isActive>false</isActive>
                    <label>Every 8 Hours</label>
                </value>
                <value>
                    <fullName>Every Hour</fullName>
                    <isActive>false</isActive>
                    <label>Every Hour</label>
                </value>
                <value>
                    <fullName>Every day</fullName>
                    <isActive>false</isActive>
                    <label>Every day</label>
                </value>
                <value>
                    <fullName>Immediate</fullName>
                    <isActive>false</isActive>
                    <label>Immediate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_Service_Soon__c</fullName>
        <label>Service Soon</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No delay</fullName>
                </value>
                <value>
                    <fullName>1 hour</fullName>
                </value>
                <value>
                    <fullName>4 hours</fullName>
                </value>
                <value>
                    <fullName>8 hours</fullName>
                </value>
                <value>
                    <fullName>12 hours</fullName>
                </value>
                <value>
                    <fullName>1 day</fullName>
                </value>
                <value>
                    <fullName>2 days</fullName>
                </value>
                <value>
                    <fullName>3 days</fullName>
                </value>
                <value>
                    <fullName>Every 12 Hours</fullName>
                    <isActive>false</isActive>
                    <label>Every 12 Hours</label>
                </value>
                <value>
                    <fullName>Every 2 days</fullName>
                    <isActive>false</isActive>
                    <label>Every 2 days</label>
                </value>
                <value>
                    <fullName>Every 3 days</fullName>
                    <isActive>false</isActive>
                    <label>Every 3 days</label>
                </value>
                <value>
                    <fullName>Every 4 Hours</fullName>
                    <isActive>false</isActive>
                    <label>Every 4 Hours</label>
                </value>
                <value>
                    <fullName>Every 8 Hours</fullName>
                    <isActive>false</isActive>
                    <label>Every 8 Hours</label>
                </value>
                <value>
                    <fullName>Every Hour</fullName>
                    <isActive>false</isActive>
                    <label>Every Hour</label>
                </value>
                <value>
                    <fullName>Every day</fullName>
                    <isActive>false</isActive>
                    <label>Every day</label>
                </value>
                <value>
                    <fullName>Immediate</fullName>
                    <isActive>false</isActive>
                    <label>Immediate</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_Stop_Now__c</fullName>
        <label>Stop Now</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No delay</fullName>
                </value>
                <value>
                    <fullName>1 hour</fullName>
                </value>
                <value>
                    <fullName>4 hours</fullName>
                </value>
                <value>
                    <fullName>8 hours</fullName>
                </value>
                <value>
                    <fullName>12 hours</fullName>
                </value>
                <value>
                    <fullName>1 day</fullName>
                </value>
                <value>
                    <fullName>2 days</fullName>
                </value>
                <value>
                    <fullName>3 days</fullName>
                </value>
                <value>
                    <fullName>Every 12 Hours</fullName>
                    <isActive>false</isActive>
                    <label>Every 12 Hours</label>
                </value>
                <value>
                    <fullName>Every 2 days</fullName>
                    <isActive>false</isActive>
                    <label>Every 2 days</label>
                </value>
                <value>
                    <fullName>Every 3 days</fullName>
                    <isActive>false</isActive>
                    <label>Every 3 days</label>
                </value>
                <value>
                    <fullName>Every 4 Hours</fullName>
                    <isActive>false</isActive>
                    <label>Every 4 Hours</label>
                </value>
                <value>
                    <fullName>Every 8 Hours</fullName>
                    <isActive>false</isActive>
                    <label>Every 8 Hours</label>
                </value>
                <value>
                    <fullName>Every Hour</fullName>
                    <isActive>false</isActive>
                    <label>Every Hour</label>
                </value>
                <value>
                    <fullName>Every day</fullName>
                    <isActive>false</isActive>
                    <label>Every day</label>
                </value>
                <value>
                    <fullName>Immediate</fullName>
                    <isActive>false</isActive>
                    <label>Immediate</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_Telematics_Service_Provider__c</fullName>
        <label>Telematics Service Provider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Eye</fullName>
                </value>
                <value>
                    <fullName>Copiloto Satelital</fullName>
                </value>
                <value>
                    <fullName>DriverTech</fullName>
                </value>
                <value>
                    <fullName>Faria Entelnet</fullName>
                </value>
                <value>
                    <fullName>Fleet Complete</fullName>
                </value>
                <value>
                    <fullName>Geotab</fullName>
                </value>
                <value>
                    <fullName>Hyundai Construction Equipment</fullName>
                </value>
                <value>
                    <fullName>KomtraxPlus</fullName>
                </value>
                <value>
                    <fullName>LHP Telematics</fullName>
                </value>
                <value>
                    <fullName>Microlise</fullName>
                </value>
                <value>
                    <fullName>omnitracs</fullName>
                </value>
                <value>
                    <fullName>OnCommand Link</fullName>
                </value>
                <value>
                    <fullName>PACCAR Solutions</fullName>
                </value>
                <value>
                    <fullName>peoplenet</fullName>
                </value>
                <value>
                    <fullName>RoadAdvisor</fullName>
                </value>
                <value>
                    <fullName>Saucon</fullName>
                </value>
                <value>
                    <fullName>Shaw Tracking</fullName>
                </value>
                <value>
                    <fullName>Specto</fullName>
                </value>
                <value>
                    <fullName>Traffilog</fullName>
                </value>
                <value>
                    <fullName>zonar</fullName>
                </value>
                <value>
                    <fullName>Other TSP</fullName>
                </value>
                <value>
                    <fullName>IDEX Fire &amp; Safety</fullName>
                </value>
                <value>
                    <fullName>KMAP</fullName>
                </value>
                <value>
                    <fullName>Streamline</fullName>
                </value>
                <value>
                    <fullName>Platform Science</fullName>
                </value>
                <value>
                    <fullName>Cummins</fullName>
                </value>
                <value>
                    <fullName>India_Edge</fullName>
                </value>
                <value>
                    <fullName>Edison</fullName>
                </value>
                <value>
                    <fullName>Navistar</fullName>
                </value>
                <value>
                    <fullName>Infobric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_TotalTSPs__c</fullName>
        <label>TotalTSPs</label>
        <summaryFilterItems>
            <field>CMI_TSP__c.CMI_TSP_Id__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CMI_TSP__c.CMI_TSP_Name__c</field>
            <operation>notEqual</operation>
            <value>Other TSP</value>
        </summaryFilterItems>
        <summaryForeignKey>CMI_TSP__c.CMI_Account_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CMI_Urgent_Fault_Notification_Email__c</fullName>
        <label>Urgent Fault Notification Email</label>
        <type>TextArea</type>
    </fields>
</CustomObject>